--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-    "name"       : "react-boilerplate",
-    "version"    : "1.0.0",
+    "name": "react-boilerplate",
+    "version": "1.0.0",
     "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier",
-    "main"       : "index.js",
-    "scripts"    : {
+    "main": "index.js",
+    "scripts": {
         "typecheck": "tsc",
-        "test"     : "jest --watch",
-        "cover"    : "jest --coverage"
+        "test": "jest --watch",
+        "cover": "jest --coverage"
     },
-    "author"      : "",
-    "license"     : "ISC",
+    "author": "",
+    "license": "ISC",
     "dependencies": {
-        "babel-cli"       : "^6.26.0",
-        "babel-jest"      : "^23.6.0",
-        "eslint"          : "^5.10.0",
-        "jest"            : "^23.6.0",
-        "jest-runner-tsc" : "^1.3.2",
-        "prettier"        : "^1.15.3",
-        "react-create-app": "^2.0.6"
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0"
+    },
+    "devDependencies": {
+        "@types/react": "^16.7.17",
+        "@types/react-dom": "^16.0.11",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-cli": "^6.26.0 || >=7.0.0",
+        "eslint": "^5.10.0",
+        "eslint-plugin-typescript": "^0.14.0",
+        "jest": "^23.6.0",
+        "jest-runner-tsc": "^1.3.2",
+        "prettier": "^1.15.3",
+        "source-map-loader": "^0.2.4",
+        "typescript": "^3.2.2",
+        "typescript-eslint-parser": "^21.0.2"
     }
 }
