--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
     "scripts": {
         "typecheck": "tsc",
         "test": "jest --watch",
-        "cover": "jest --coverage"
+        "cover": "jest --coverage",
+        "start": "babel-node --extensions '.ts,.tsx' index.ts"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@reach/router": "^1.2.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.2.3",
+        "@babel/core": "^7.2.2",
+        "@babel/preset-env": "^7.2.3",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.1.0",
+        "@types/jest": "^23.3.10",
         "@types/react": "^16.7.17",
         "@types/react-dom": "^16.0.11",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-cli": "^6.26.0 || >=7.0.0",
         "eslint": "^5.10.0",
         "eslint-plugin-typescript": "^0.14.0",
         "jest": "^23.6.0",
@@ -26,6 +33,28 @@
         "prettier": "^1.15.3",
         "source-map-loader": "^0.2.4",
         "typescript": "^3.2.2",
+        "typescript-babel-jest": "^1.0.5",
         "typescript-eslint-parser": "^21.0.2"
+    },
+    "jest": {
+        "setupFiles": [
+            "./jest.config.js"
+        ],
+        "moduleDirectories": [
+            "./node_modules",
+            "./src"
+        ],
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx"
+        ],
+        "transform": {
+            "^.+\\.(js|jsx|ts|tsx)$": "typescript-babel-jest"
+        }
+    },
+    "resolutions": {
+        "babel-core": "^7.0.0-bridge.0"
     }
 }
