--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,15 @@
 {
     "presets": [
         [
-            "@babel/env",
+            "@babel/preset-env",
             {
                 "targets": {
-                    "browsers": [
-                        "last 2 versions"
-                    ]
+                    "node": "current",
+                    "browsers": ["last 2 versions"]
                 }
             }
         ],
         "@babel/react",
-        "@babel/typescript"
+        "@babel/preset-typescript"
     ]
 }
