--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier",
     "main": "index.js",
     "scripts": {
+        "lint": "eslint . --ext \".js,.ts,.tsx\"",
         "typecheck": "tsc",
         "test": "jest --watch",
         "cover": "jest --coverage",
@@ -19,17 +20,19 @@
     "devDependencies": {
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.2.2",
+        "@babel/parser": "^7.2.3",
         "@babel/preset-env": "^7.2.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
         "@types/jest": "^23.3.10",
         "@types/react": "^16.7.17",
         "@types/react-dom": "^16.0.11",
-        "awesome-typescript-loader": "^5.2.1",
         "eslint": "^5.10.0",
         "eslint-plugin-typescript": "^0.14.0",
         "jest": "^23.6.0",
+        "jest-runner-eslint": "^0.7.1",
         "jest-runner-tsc": "^1.3.2",
+        "pluggable-babel-eslint": "^0.3.0",
         "prettier": "^1.15.3",
         "source-map-loader": "^0.2.4",
         "typescript": "^3.2.2",
