Added Styled Components and React Testing Library

--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-    "name": "react-boilerplate",
-    "version": "1.0.0",
-    "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier",
-    "main": "index.js",
-    "scripts": {
-        "lint": "eslint . --ext \".js,.ts,.tsx\"",
+    "name"       : "react-boilerplate",
+    "version"    : "1.0.0",
+    "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testig Library",
+    "main"       : "index.js",
+    "scripts"    : {
+        "format"   : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+        "lint"     : "eslint . --ext \".js,.ts,.tsx\"",
         "typecheck": "tsc",
-        "test": "jest --watch",
-        "cover": "jest --coverage",
-        "start": "babel-node --extensions '.ts,.tsx' index.ts"
+        "test"     : "jest --watch",
+        "cover"    : "jest --coverage",
+        "start"    : "babel-node --extensions '.ts,.tsx' index.ts"
     },
-    "author": "",
-    "license": "ISC",
+    "author"      : "",
+    "license"     : "ISC",
     "dependencies": {
-        "@reach/router": "^1.2.1",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0"
+        "@reach/router"                 : "^1.2.1",
+        "babel-plugin-styled-components": "^1.10.0",
+        "react"                         : "^16.7.0",
+        "react-dom"                     : "^16.7.0",
+        "styled-components"             : "^4.1.3"
     },
     "devDependencies": {
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.2.2",
-        "@babel/parser": "^7.2.3",
-        "@babel/preset-env": "^7.2.3",
-        "@babel/preset-react": "^7.0.0",
+        "@babel/cli"              : "^7.2.3",
+        "@babel/core"             : "^7.2.2",
+        "@babel/parser"           : "^7.2.3",
+        "@babel/preset-env"       : "^7.2.3",
+        "@babel/preset-react"     : "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
-        "@types/jest": "^23.3.10",
-        "@types/react": "^16.7.17",
-        "@types/react-dom": "^16.0.11",
-        "eslint": "^5.10.0",
+        "@types/jest"             : "^23.3.10",
+        "@types/react"            : "^16.7.17",
+        "@types/react-dom"        : "^16.0.11",
+        "eslint"                  : "^5.10.0",
         "eslint-plugin-typescript": "^0.14.0",
-        "jest": "^23.6.0",
-        "jest-runner-eslint": "^0.7.1",
-        "jest-runner-tsc": "^1.3.2",
-        "pluggable-babel-eslint": "^0.3.0",
-        "prettier": "^1.15.3",
-        "source-map-loader": "^0.2.4",
-        "typescript": "^3.2.2",
-        "typescript-babel-jest": "^1.0.5",
+        "jest"                    : "^23.6.0",
+        "jest-runner-eslint"      : "^0.7.1",
+        "jest-runner-tsc"         : "^1.3.2",
+        "pluggable-babel-eslint"  : "^0.3.0",
+        "prettier"                : "^1.15.3",
+        "react-testing-library"   : "^5.4.2",
+        "source-map-loader"       : "^0.2.4",
+        "typescript"              : "^3.2.2",
+        "typescript-babel-jest"   : "^1.0.5",
         "typescript-eslint-parser": "^21.0.2"
     },
     "jest": {
