--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,6 @@
         ],
         "@babel/react",
         "@babel/preset-typescript"
-    ]
+    ],
+    "plugins": ["babel-plugin-styled-components"]
 }
