--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
-    "name": "react-boilerplate",
-    "version": "1.0.0",
+    "name"       : "react-boilerplate",
+    "version"    : "1.0.0",
     "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testig Library, Webpack, Webpack Dev Server",
-    "main": "index.js",
-    "scripts": {
-        "format": "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-        "lint": "eslint . --ext \".js,.ts,.tsx\"",
-        "typecheck": "tsc",
-        "test": "jest --watch",
-        "cover": "jest --coverage",
-        "start": "babel-node --extensions '.ts,.tsx' index.ts",
-        "build": "webpack --env.NODE_ENV=production",
+    "main"       : "index.tsx",
+    "scripts"    : {
+        "format"           : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+        "lint"             : "eslint . --ext \".js,.ts,.tsx\"",
+        "typecheck"        : "tsc",
+        "test"             : "jest --watch",
+        "cover"            : "jest --coverage",
+        "start"            : "babel-node --extensions '.ts,.tsx' index.ts",
+        "build"            : "webpack --env.NODE_ENV=production",
         "server-no-reaload": "webpack-dev-server --env.NODE_ENV=development",
-        "server": "nodemon --watch webpack.config.ts -x webpack-dev-server --  --env.NODE_ENV=development"
+        "server"           : "nodemon --watch webpack.config.ts -x webpack-dev-server --  --env.NODE_ENV=development"
     },
-    "author": "",
-    "license": "ISC",
+    "author"      : "",
+    "license"     : "ISC",
     "dependencies": {
-        "@reach/router": "^1.2.1",
+        "@reach/router"                 : "^1.2.1",
         "babel-plugin-styled-components": "^1.10.0",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
-        "styled-components": "^4.1.3"
+        "react"                         : "^16.7.0",
+        "react-dom"                     : "^16.7.0",
+        "styled-components"             : "^4.1.3"
     },
     "devDependencies": {
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.2.2",
-        "@babel/parser": "^7.2.3",
+        "@babel/cli"                             : "^7.2.3",
+        "@babel/core"                            : "^7.2.2",
+        "@babel/parser"                          : "^7.2.3",
         "@babel/plugin-proposal-class-properties": "^7.2.3",
-        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@babel/preset-env": "^7.2.3",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.1.0",
-        "@types/jest": "^23.3.10",
-        "@types/node": "^10.12.18",
-        "@types/react": "^16.7.17",
-        "@types/react-dom": "^16.0.11",
-        "@types/webpack": "^4.4.22",
-        "babel-loader": "^8.0.4",
-        "clean-webpack-plugin": "^1.0.0",
-        "copy-webpack-plugin": "^4.6.0",
-        "eslint": "^5.10.0",
-        "eslint-plugin-typescript": "^0.14.0",
-        "html-minifier": "^3.5.21",
-        "jest": "^23.6.0",
-        "jest-runner-eslint": "^0.7.1",
-        "jest-runner-tsc": "^1.3.2",
-        "nodemon": "^1.18.9",
-        "pluggable-babel-eslint": "^0.3.0",
-        "prettier": "^1.15.3",
-        "react-hot-loader": "^4.6.3",
-        "react-testing-library": "^5.4.2",
-        "source-map-loader": "^0.2.4",
-        "ts-loader": "^5.3.2",
-        "ts-node": "^7.0.1",
-        "typescript": "^3.2.2",
-        "typescript-babel-jest": "^1.0.5",
-        "typescript-eslint-parser": "^21.0.2",
-        "uglifyjs-webpack-plugin": "^2.1.1",
-        "webpack": "^4.28.3",
-        "webpack-bundle-analyzer": "^3.0.3",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.14"
+        "@babel/plugin-syntax-dynamic-import"    : "^7.2.0",
+        "@babel/preset-env"                      : "^7.2.3",
+        "@babel/preset-react"                    : "^7.0.0",
+        "@babel/preset-typescript"               : "^7.1.0",
+        "@types/jest"                            : "^23.3.10",
+        "@types/node"                            : "^10.12.18",
+        "@types/react"                           : "^16.7.17",
+        "@types/react-dom"                       : "^16.0.11",
+        "@types/webpack"                         : "^4.4.22",
+        "babel-loader"                           : "^8.0.4",
+        "clean-webpack-plugin"                   : "^1.0.0",
+        "copy-webpack-plugin"                    : "^4.6.0",
+        "eslint"                                 : "^5.10.0",
+        "eslint-plugin-typescript"               : "^0.14.0",
+        "html-minifier"                          : "^3.5.21",
+        "jest"                                   : "^23.6.0",
+        "jest-runner-eslint"                     : "^0.7.1",
+        "jest-runner-tsc"                        : "^1.3.2",
+        "nodemon"                                : "^1.18.9",
+        "pluggable-babel-eslint"                 : "^0.3.0",
+        "prettier"                               : "^1.15.3",
+        "react-hot-loader"                       : "^4.6.3",
+        "react-testing-library"                  : "^5.4.2",
+        "source-map-loader"                      : "^0.2.4",
+        "ts-loader"                              : "^5.3.2",
+        "ts-node"                                : "^7.0.1",
+        "typescript"                             : "^3.2.2",
+        "typescript-babel-jest"                  : "^1.0.5",
+        "typescript-eslint-parser"               : "^21.0.2",
+        "uglifyjs-webpack-plugin"                : "^2.1.1",
+        "webpack"                                : "^4.28.3",
+        "webpack-bundle-analyzer"                : "^3.0.3",
+        "webpack-cli"                            : "^3.1.2",
+        "webpack-dev-server"                     : "^3.1.14"
     },
     "jest": {
         "setupFiles": [
