Webpack works with React and Typescript and Babel. Yay! Jest actually works.

--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
     "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testig Library, Webpack, Webpack Dev Server",
     "main"       : "index.tsx",
     "scripts"    : {
+        "dev"             : "webpack --mode development --watch",
         "format"          : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
         "lint"            : "eslint . --ext \".js,.ts,.tsx\"",
-        "typecheck"       : "tsc",
+        "type-check"      : "tsc",
         "test"            : "jest --watch",
         "cover"           : "jest --coverage",
         "start"           : "babel-node --extensions '.ts,.tsx' index.ts",
-        "build"           : "webpack --env.NODE_ENV=production",
+        "build"           : "webpack --mode production",
+        "build-dev"       : "webpack --mode development",
         "server-no-reload": "webpack-dev-server --env.NODE_ENV=development",
-        "server"          : "nodemon --watch webpack.config.ts -x webpack-dev-server --  --env.NODE_ENV=development"
+        "server"          : "nodemon --watch webpack.config.js -x webpack-dev-server --  --env.NODE_ENV=development",
+        "start"           : "babel-node --extensions '.ts,.tsx' index.tsx"
     },
-    "author"      : "",
-    "license"     : "ISC",
+    "author"      : "Sebastian Pieczyński",
+    "license"     : "MIT",
     "dependencies": {
         "@reach/router"                 : "^1.2.1",
         "babel-plugin-styled-components": "^1.10.0",
@@ -37,11 +40,13 @@
         "@types/react"                           : "^16.7.17",
         "@types/react-dom"                       : "^16.0.11",
         "@types/webpack"                         : "^4.4.22",
+        "awesome-typescript-loader"              : "^5.2.1",
         "babel-loader"                           : "^8.0.4",
         "clean-webpack-plugin"                   : "^1.0.0",
         "copy-webpack-plugin"                    : "^4.6.0",
         "eslint"                                 : "^5.10.0",
         "eslint-plugin-typescript"               : "^0.14.0",
+        "fork-ts-checker-webpack-plugin"         : "^0.5.2",
         "html-minifier"                          : "^3.5.21",
         "jest"                                   : "^23.6.0",
         "jest-runner-eslint"                     : "^0.7.1",
