--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
         "test": "jest --watch",
         "cover": "jest --coverage",
         "start": "babel-node --extensions '.ts,.tsx' index.tsx",
-        "build": "webpack --mode production",
+        "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+        "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+        "build-prod": "webpack --mode production",
         "build-dev": "webpack --mode development",
         "server-no-reload": "webpack-dev-server --env.NODE_ENV=development",
-        "server": "nodemon --watch webpack.config.js -x webpack-dev-server --  --env.NODE_ENV=development"
+        "server": "nodemon --watch webpack.config.js -x webpack-dev-server --  --env.NODE_ENV=development",
+        "server:start": "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.js"
     },
     "author": "Sebastian Pieczyński",
     "license": "MIT",
     "dependencies": {
         "@babel/polyfill": "^7.2.5",
+        "@emotion/core": "^10.0.5",
         "@reach/router": "^1.2.1",
         "babel-plugin-styled-components": "^1.10.0",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
-        "styled-components": "^4.1.3"
+        "styled-components": "^4.1.3",
+        "styled-system": "^3.2.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.2.3",
@@ -42,20 +47,36 @@
         "@types/react-dom": "^16.0.11",
         "@types/webpack": "^4.4.22",
         "babel-loader": "^8.0.4",
+        "babel-plugin-emotion": "^10.0.5",
         "clean-webpack-plugin": "^1.0.0",
         "copy-webpack-plugin": "^4.6.0",
+        "cross-env": "^5.2.0",
+        "css-loader": "^2.1.0",
+        "cypress": "^3.1.4",
         "eslint": "^5.10.0",
         "eslint-plugin-typescript": "^0.14.0",
+        "file-loader": "^3.0.1",
+        "html-loader": "^0.5.5",
         "html-minifier": "^3.5.21",
+        "html-webpack-plugin": "^3.2.0",
+        "image-webpack-loader": "^4.6.0",
         "jest": "^23.6.0",
         "jest-runner-eslint": "^0.7.1",
+        "jest-runner-stylelint": "^1.0.0",
         "jest-runner-tsc": "^1.3.2",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.11.0",
         "nodemon": "^1.18.9",
         "pluggable-babel-eslint": "^0.3.0",
         "prettier": "^1.15.3",
         "react-hot-loader": "^4.6.3",
         "react-testing-library": "^5.4.2",
+        "sass-loader": "^7.1.0",
         "source-map-loader": "^0.2.4",
+        "style-loader": "^0.23.1",
+        "stylelint": "^9.9.0",
+        "stylelint-config-standard": "^18.2.0",
+        "stylelint-webpack-plugin": "^0.10.5",
         "typescript": "^3.2.2",
         "typescript-babel-jest": "^1.0.5",
         "typescript-eslint-parser": "^21.0.2",
