--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "jest": "^23.6.0",
+    "jest-in-case": "^1.0.2",
     "jest-runner-eslint": "^0.7.1",
     "jest-runner-stylelint": "^1.0.0",
     "jest-runner-tsc": "^1.3.2",
