Add Cypress configuration and Intellisense for smoke ping test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name"       : "react-boilerplate",
   "version"    : "1.0.0",
-  "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testig Library, Webpack, Webpack Dev Server",
+  "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
     "dev"             : "webpack --mode development --watch",
@@ -10,11 +10,12 @@
     "stylelint-check" : "stylelint-config-prettier-check",
     "type-check"      : "tsc",
     "test"            : "jest --watch",
+    "cypress:open"    : "cypress open",
     "cover"           : "jest --coverage",
     "build"           : "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod"      : "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "server-no-reload": "cross-env NODE_ENV=development webpack-dev-server",
-    "server"          : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
+    "server"          : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server --hot",
     "server:dev"      : "nodemon --watch webpack.config.js -x webpack-dev-server --  --env.NODE_ENV=development",
     "server:start"    : "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.js"
   },
@@ -45,16 +46,18 @@
     "@types/react-dom"                            : "^16.0.11",
     "@types/webpack"                              : "^4.4.22",
     "babel-loader"                                : "^8.0.4",
-    "babel-plugin-emotion"                        : "^10.0.5",
-    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "babel-plugin-dynamic-import-node"            : "^2.2.0",
+    "babel-plugin-emotion"                        : "^10.0.5",
     "babel-plugin-styled-components"              : "^1.10.0",
+    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "clean-webpack-plugin"                        : "^1.0.0",
     "copy-webpack-plugin"                         : "^4.6.0",
+    "create-jest-runner"                          : "^0.4.1",
     "cross-env"                                   : "^5.2.0",
     "css-loader"                                  : "^2.1.0",
     "cypress"                                     : "^3.1.4",
     "eslint"                                      : "^5.10.0",
+    "eslint-plugin-cypress"                       : "^2.2.0",
     "eslint-plugin-typescript"                    : "^0.14.0",
     "file-loader"                                 : "^3.0.1",
     "html-loader"                                 : "^0.5.5",
