Redoing HMR by default

--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
-    "dev"             : "webpack --mode development --watch",
-    "format"          : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-    "lint"            : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
-    "stylelint-check" : "stylelint-config-prettier-check",
-    "type-check"      : "tsc",
-    "test"            : "jest --watch",
-    "cypress:open"    : "cypress open",
-    "cover"           : "jest --coverage",
-    "build"           : "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod"      : "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "server-no-reload": "cross-env NODE_ENV=development webpack-dev-server",
-    "server"          : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server --hot",
-    "server:dev"      : "nodemon --watch webpack.config.js -x webpack-dev-server --  --env.NODE_ENV=development",
-    "server:start"    : "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.js"
+    "dev"            : "webpack --mode development --watch",
+    "format"         : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+    "lint"           : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
+    "stylelint-check": "stylelint-config-prettier-check",
+    "type-check"     : "tsc",
+    "test"           : "jest --watch",
+    "cypress"        : "cypress open",
+    "coverage"       : "jest --coverage",
+    "build"          : "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod"     : "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "server"         : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
+    "server:prod"    : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js"
   },
   "author"      : "Sebastian Pieczyński",
   "license"     : "MIT",
