--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
-    "dev"            : "webpack --mode development --watch",
-    "format"         : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-    "lint"           : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
-    "stylelint-check": "stylelint-config-prettier-check",
-    "type-check"     : "tsc",
-    "test"           : "jest --watch",
-    "cypress"        : "cypress open",
-    "coverage"       : "jest --coverage",
-    "build"          : "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod"     : "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "server"         : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
-    "server:prod"    : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js"
+    "dev"        : "webpack --mode development --watch",
+    "format"     : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+    "lint"       : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
+    "style:check": "stylelint-config-prettier-check",
+    "type:check" : "tsc",
+    "test"       : "jest --runInBand --watch",
+    "test:once"  : "jest --runInBand",
+    "test:debug" : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+    "cypress"    : "cypress open",
+    "coverage"   : "jest --coverage --runInBand",
+    "build"      : "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod" : "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "server"     : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
+    "server:prod": "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
+    "check:all"  : "npm run build:prod && npm run build && npm run test:once && npm run coverage && npm run style:check npm run type:check"
   },
   "author"      : "Sebastian Pieczyński",
   "license"     : "MIT",
@@ -55,7 +58,9 @@
     "css-loader"                                  : "^2.1.0",
     "cypress"                                     : "^3.1.4",
     "eslint"                                      : "^5.10.0",
+    "eslint-import-resolver-jest"                 : "^2.1.1",
     "eslint-plugin-cypress"                       : "^2.2.0",
+    "eslint-plugin-import"                        : "^2.14.0",
     "eslint-plugin-typescript"                    : "^0.14.0",
     "file-loader"                                 : "^3.0.1",
     "html-loader"                                 : "^0.5.5",
@@ -63,6 +68,7 @@
     "html-webpack-plugin"                         : "^3.2.0",
     "image-webpack-loader"                        : "^4.6.0",
     "jest"                                        : "^23.6.0",
+    "jest-emotion"                                : "^10.0.6",
     "jest-in-case"                                : "^1.0.2",
     "jest-runner-eslint"                          : "^0.7.1",
     "jest-runner-stylelint"                       : "^1.0.0",
