--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
-    "dev"        : "webpack --mode development --watch",
-    "format"     : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-    "lint"       : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
-    "style:check": "stylelint-config-prettier-check",
-    "type:check" : "tsc",
-    "test"       : "jest --runInBand --watch",
-    "test:once"  : "jest --runInBand",
-    "test:debug" : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
-    "cypress"    : "cypress open",
-    "coverage"   : "jest --coverage --runInBand",
-    "build"      : "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod" : "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "server"     : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
-    "server:prod": "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
-    "validate"   : "npm run build:prod && npm run build && npm run test:once && npm run coverage && npm run style:check npm run type:check"
+    "dev"          : "webpack --mode development --watch",
+    "format"       : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+    "lint"         : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
+    "style:check"  : "stylelint-config-prettier-check",
+    "type:check"   : "tsc",
+    "test"         : "is-ci \"test:coverage\" \"test:watch\"",
+    "test:once"    : "jest --runInBand",
+    "test:watch"   : "jest --runInBand --watch",
+    "test:debug"   : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+    "test:coverage": "jest --coverage",
+    "cypress"      : "cypress open",
+    "build"        : "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod"   : "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "server"       : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
+    "server:prod"  : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
+    "validate"     : "npm run build:prod && npm run build && npm run test:once && npm run test:coverage && npm run style:check npm run type:check"
   },
   "author"      : "Sebastian Pieczyński",
   "license"     : "MIT",
@@ -67,12 +68,14 @@
     "html-minifier"                               : "^3.5.21",
     "html-webpack-plugin"                         : "^3.2.0",
     "image-webpack-loader"                        : "^4.6.0",
+    "is-ci-cli"                                   : "^1.1.1",
     "jest"                                        : "^23.6.0",
     "jest-emotion"                                : "^10.0.6",
     "jest-in-case"                                : "^1.0.2",
     "jest-runner-eslint"                          : "^0.7.1",
     "jest-runner-stylelint"                       : "^1.0.0",
     "jest-runner-tsc"                             : "^1.3.2",
+    "jest-watch-typeahead"                        : "^0.2.0",
     "mini-css-extract-plugin"                     : "^0.5.0",
     "node-sass"                                   : "^4.11.0",
     "nodemon"                                     : "^1.18.9",
