--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "jest-runner-eslint": "^0.7.1",
     "jest-runner-stylelint": "^1.0.0",
     "jest-runner-tsc": "^1.3.2",
+    "jest-watch-select-projects": "^0.1.1",
     "jest-watch-typeahead": "^0.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
