Change all files to Typescript (test are broken, again by import scss)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "style:check"  : "stylelint-config-prettier-check",
     "type:check"   : "tsc",
     "test"         : "is-ci \"test:coverage\" \"test:watch\"",
-    "test:once"    : "jest --runInBand",
+    "test:once"    : "jest --no-cache --runInBand",
     "test:watch"   : "jest --runInBand --watch",
     "test:debug"   : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "test:coverage": "jest --coverage",
@@ -91,6 +91,7 @@
     "react-testing-library"                       : "^5.4.2",
     "sass-loader"                                 : "^7.1.0",
     "source-map-loader"                           : "^0.2.4",
+    "start-server-and-test"                       : "^1.7.11",
     "style-loader"                                : "^0.23.1",
     "stylelint"                                   : "^9.9.0",
     "stylelint-config-prettier"                   : "^4.0.0",
