--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "pretty"                      : true,
     "skipLibCheck"                : true,
     "noEmit"                      : true /* Most important thing: will not compile anything */,
+    "module"                      : "commonjs",
     "jsx"                         : "preserve" /* Do not compile your JSX */,
     "allowSyntheticDefaultImports": true /* To import without "* as" */,
     "esModuleInterop"             : true,
     "alwaysStrict"                : false,
-    "target"                      : "ESNEXT",
+    "target"                      : "es5" /*esnext will fail the jest tests*/,
     "strictNullChecks"            : true /* You have to add "| null" in your type when needed */,
     "strictFunctionTypes"         : true /* Enable strict checking of function types. */,
     "noImplicitThis"              : true /* Raise error on 'this' expressions with an implied 'any' type. */,
@@ -16,13 +17,13 @@
     "noUnusedParameters"          : true /* Report errors on unused parameters. */,
     "noImplicitReturns"           : true /* Report error when not all code paths in function return a value. */,
     "noFallthroughCasesInSwitch"  : true /* Report errors for fallthrough cases in switch statement. */,
-    "moduleResolution"            : "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "module"                      : "es2015" /*allows dynamic import */,
-    "baseUrl"                     : "./src" /* Base directory to resolve non-absolute module names. */,
-    "allowJs"                     : true,
-    "sourceMap"                   : true
+    // "moduleResolution"            : "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    // "module"                      : "es2015" /*allows dynamic import */,
+    "baseUrl": "./src"  /* Base directory to resolve non-absolute module names. */
+    // "allowJs"                     : true,
+    // "sourceMap"                   : true
   },
 
-  "include": ["./src/**/*"],
+  "include": ["src"],
   "exclude": ["node_modules", "**/*.spec.ts", "dist", "coverage"]
 }
