All tests are passing - see Known Issues for why

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "sourceMap": true
   },
 
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts", "dist", "coverage"]
 }
