--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:prod"   : "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "server"       : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
     "server:prod"  : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
-    "validate"     : "npm run build:prod && npm run build && npx jest --config ./test/jest.test.js && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage"
+    "validate"     : "npm run build:prod && npm run build && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage && npx jest --config ./test/jest.test.js"
   },
   "husky": {
     "hooks": {
@@ -30,13 +30,12 @@
   "author"      : "Sebastian Pieczyński",
   "license"     : "MIT",
   "dependencies": {
-    "@babel/polyfill"  : "^7.2.5",
-    "@emotion/core"    : "^10.0.5",
-    "@reach/router"    : "^1.2.1",
-    "react"            : "^16.7.0",
-    "react-dom"        : "^16.7.0",
-    "styled-components": "^4.1.3",
-    "styled-system"    : "^3.2.0"
+    "@babel/polyfill": "^7.2.5",
+    "@emotion/core"  : "^10.0.5",
+    "@reach/router"  : "^1.2.1",
+    "react"          : "^16.7.0",
+    "react-dom"      : "^16.7.0",
+    "styled-system"  : "^3.2.0"
   },
   "devDependencies": {
     "@babel/cli"                                  : "^7.2.3",
@@ -108,6 +107,7 @@
     "stylelint-config-prettier"                   : "^4.0.0",
     "stylelint-config-standard"                   : "^18.2.0",
     "stylelint-webpack-plugin"                    : "^0.10.5",
+    "ts-jest"                                     : "^23.10.5",
     "typed-css-modules"                           : "^0.3.7",
     "typescript"                                  : "^3.2.2",
     "typescript-babel-jest"                       : "^1.0.5",
