--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
-    "typings"      : "tcm -p \"src/**/*.+(css|scss)\" --camelCase --watch",
-    "dev"          : "webpack --mode development --watch",
-    "format"       : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-    "lint"         : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
-    "style:check"  : "stylelint-config-prettier-check",
-    "type:check"   : "tsc",
-    "test"         : "is-ci \"test:coverage\" \"test:watch\"",
-    "test:once"    : "jest --no-cache --runInBand",
-    "test:watch"   : "jest --runInBand --watch",
-    "test:debug"   : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
-    "test:coverage": "jest --coverage",
-    "cypress"      : "cypress open",
-    "build"        : "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod"   : "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "server"       : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
-    "server:prod"  : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
-    "validate"     : "npm run build:prod && npm run build && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage && npx jest --config ./test/jest.test.js"
+    "typings"       : "tcm -p \"src/**/*.+(css|scss)\" --camelCase --watch",
+    "dev"           : "webpack --mode development --watch",
+    "format"        : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+    "check:lint"    : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
+    "check:style"   : "stylelint-config-prettier-check",
+    "check:type"    : "tsc",
+    "docz:dev"      : "docz dev",
+    "docz:build"    : "docz build",
+    "test"          : "is-ci \"test:coverage\" \"test:watch\"",
+    "test:once"     : "jest --no-cache --runInBand",
+    "test:watch"    : "jest --runInBand --watch",
+    "test:debug"    : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+    "test:coverage" : "jest --coverage",
+    "prestatic:test": "yarn build",
+    "prestatic:prod": "yarn build:prod",
+    "test:e2e"      : "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
+    "test:e2e:prod" : "start-server-and-test static:prod http://localhost:8080 cy:run",
+    "test:e2e:dev"  : "start-server-and-test static:dev http://localhost:8080 cy:open",
+    "cy:open"       : "cypress open",
+    "cy:run"        : "cypress run",
+    "build"         : "cross-env NODE_ENV=development webpack --config webpack.config.js && npm run docz:build",
+    "build:prod"    : "cross-env NODE_ENV=production webpack --config webpack.config.js && docz:build",
+    "server:watch"  : "nodemon --watch webpack.config.js --watch src --watch cypress -x cross-env NODE_ENV=development webpack-dev-server",
+    "server:dev"    : "cross-env NODE_ENV=development webpack-dev-server",
+    "server:prod"   : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
+    "static:test"   : "serve --no-clipboard --single --listen 8080 dist",
+    "static:dev"    : "nodemon -e js,ts,tsx,jsx,scss,css,html --watch src -x npm run static:test",
+    "static:prod"   : "serve --no-clipboard --single --listen 8080 dist",
+    "validate"      : "npm run build:prod && npm run build && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage && npx jest --config ./test/jest.test.js && npm run test:e2e:run"
   },
   "husky": {
     "hooks": {
@@ -33,6 +45,7 @@
     "@babel/polyfill": "^7.2.5",
     "@emotion/core"  : "^10.0.5",
     "@reach/router"  : "^1.2.1",
+    "emotion-theming": "^10.0.6",
     "react"          : "^16.7.0",
     "react-dom"      : "^16.7.0",
     "styled-system"  : "^3.2.0"
@@ -66,7 +79,7 @@
     "css-loader"                                  : "^2.1.0",
     "cypress"                                     : "^3.1.4",
     "cypress-testing-library"                     : "^2.3.5",
-    "docz"                                        : "^0.13.7",
+    "docz"                                        : "latest",
     "eslint"                                      : "^5.10.0",
     "eslint-import-resolver-jest"                 : "^2.1.1",
     "eslint-plugin-cypress"                       : "^2.2.0",
@@ -93,6 +106,7 @@
     "mini-css-extract-plugin"                     : "^0.5.0",
     "node-sass"                                   : "^4.11.0",
     "nodemon"                                     : "^1.18.9",
+    "npm-run-all"                                 : "^4.1.5",
     "pluggable-babel-eslint"                      : "^0.3.0",
     "postcss-loader"                              : "^3.0.0",
     "postcss-preset-env"                          : "^6.5.0",
@@ -101,6 +115,7 @@
     "react-hot-loader"                            : "^4.6.3",
     "react-testing-library"                       : "^5.4.2",
     "sass-loader"                                 : "^7.1.0",
+    "serve"                                       : "^10.1.1",
     "source-map-loader"                           : "^0.2.4",
     "start-server-and-test"                       : "^1.7.11",
     "style-loader"                                : "^0.23.1",
@@ -115,6 +130,7 @@
     "typings-for-css-modules-loader"              : "^1.7.0",
     "uglifyjs-webpack-plugin"                     : "^2.1.1",
     "url-loader"                                  : "^1.1.2",
+    "watch"                                       : "^1.0.2",
     "webpack"                                     : "^4.28.3",
     "webpack-cli"                                 : "^3.1.2",
     "webpack-dev-server"                          : "^3.1.14"
