Configure docz, remove plugins and docz:build command (time consuming)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main": "index.tsx",
   "scripts": {
-    "typings": "tcm -p \"src/**/*.+(css|scss)\" --camelCase --watch",
+    "typings": "tcm -p \"src/**/*.+(css|scss)\" --camelCase",
+    "typings:watch": "tcm -p \"src/**/*.+(css|scss)\" --camelCase --watch",
     "dev": "webpack --mode development --watch",
     "format": "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
     "check:lint": "eslint . --ext \".js,.ts,.tsx,.jsx\"",
@@ -13,26 +14,26 @@
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "test": "is-ci \"test:coverage\" \"test:watch\"",
-    "test:once": "jest --no-cache --runInBand",
+    "test:once": "jest --no-cache",
     "test:watch": "jest --runInBand --watch",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "test:coverage": "jest --coverage",
     "prestatic:test": "yarn build",
     "prestatic:prod": "yarn build:prod",
-    "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
+    "test:e2e": "is-ci \"test:e2e:prod\" \"test:e2e:dev\"",
     "test:e2e:prod": "start-server-and-test static:prod http://localhost:8080 cy:run",
     "test:e2e:dev": "start-server-and-test static:dev http://localhost:8080 cy:open",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js && npm run docz:build",
-    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js && docz:build",
+    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js && npm run typings",
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js && npm run typings",
     "server:watch": "nodemon --watch webpack.config.js --watch src --watch cypress -x cross-env NODE_ENV=development webpack-dev-server",
     "server:dev": "cross-env NODE_ENV=development webpack-dev-server",
     "server:prod": "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
     "static:test": "serve --no-clipboard --single --listen 8080 dist",
     "static:dev": "nodemon -e js,ts,tsx,jsx,scss,css,html --watch src -x npm run static:test",
     "static:prod": "serve --no-clipboard --single --listen 8080 dist",
-    "validate": "npm run build:prod && npm run build && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage && npx jest --config ./test/jest.test.js && npm run test:e2e:run"
+    "validate": "npm run build:prod && npm run build && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage && npx jest --config ./test/jest.test.js && npm run test:e2e:run && npm run docz:build"
   },
   "husky": {
     "hooks": {
@@ -46,7 +47,7 @@
     "@emotion/core": "^10.0.5",
     "@reach/router": "^1.2.1",
     "emotion-theming": "^10.0.6",
-    "react": "^16.7.0",
+    "react": "^16.8.0-alpha.1 ",
     "react-dom": "^16.7.0",
     "styled-system": "^3.2.0"
   },
@@ -81,6 +82,7 @@
     "cypress": "^3.1.4",
     "cypress-testing-library": "^2.3.5",
     "docz": "latest",
+    "docz-plugin-css": "^0.11.0",
     "docz-theme-default": "^0.13.7",
     "eslint": "^5.10.0",
     "eslint-import-resolver-jest": "^2.1.1",
@@ -116,14 +118,6 @@
     "prettier-stylelint": "^0.4.2",
     "react-hot-loader": "^4.6.3",
     "react-testing-library": "^5.4.2",
-    "remark-abbr": "^1.2.3",
-    "remark-autolink-headings": "^5.1.0",
-    "remark-code-screenshot": "^1.0.0",
-    "remark-emoji": "^2.0.2",
-    "remark-emoji-to-gemoji": "^1.1.0",
-    "remark-gemoji": "^4.0.2",
-    "remark-github": "^7.0.6",
-    "remark-graphviz": "^0.2.2",
     "sass-loader": "^7.1.0",
     "serve": "^10.1.1",
     "source-map-loader": "^0.2.4",
@@ -138,7 +132,6 @@
     "typescript-babel-jest": "^1.0.5",
     "typescript-eslint-parser": "^21.0.2",
     "typings-for-css-modules-loader": "^1.7.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "watch": "^1.0.2",
     "webpack": "^4.28.3",
